# Crime_managment_system

./: LICENSE
Backend/: .gitignore  (+11 more)
ccms-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Instruction_9.md  TEST_REST.md  pyproject.toml  requirements.txt
ccms-backend/alembic/: env.py
ccms-backend/alembic/versions/: 001_initial_schema.py  004_case_permissions_and_updates.py  008_case_management_completion.py  009_reporting_indexes.py  012_add_arrest_indexes.py
ccms-backend/app/: __init__.py  main.py
ccms-backend/app/config/: __init__.py  settings.py
ccms-backend/app/core/: __init__.py  authorization.py  dependencies.py  exceptions.py  middleware.py  permissions_registry.py  rate_limiter.py  redis_client.py  session_manager.py  token_enforcement.py
ccms-backend/app/modules/: __init__.py
ccms-backend/app/modules/arrest/: router.py
ccms-backend/app/modules/auth/: __init__.py  exceptions.py  models.py  router.py
ccms-backend/app/modules/case_management/: models.py  repository.py
ccms-backend/app/modules/departments/: exceptions.py
ccms-backend/app/modules/evidence/: __init__.py  models.py  repository.py
ccms-backend/app/modules/interrogation/: repository.py  router.py
ccms-backend/app/modules/legal/: repository.py  router.py  service.py
ccms-backend/app/modules/personnel/: __init__.py  exceptions.py  models.py  router.py
ccms-backend/app/shared/: base_service.py  pagination.py  response_schemas.py
ccms-backend/app/tests/: test_docker_health.py  test_rbac.py
ccms-backend/scripts/: seed_core_data.py  startup.sh  wait_for_db.py
(+695 files in other folders)
